# athena

./: .gitignore  LESSONS_LEARNED_DRIVE.md  README.md
CAD/: README.md  assembly_ATHENA v175.f3z  assembly_ATHENA v175.step  assembly_ATHENA v176.f3z
E-Stop/: README.md
E-Stop/esp32_deadman_sender_firmware/: platformio.ini
E-Stop/esp32_deadman_sender_firmware/src/: main.cpp
E-Stop/esp32_lora_estop_firmware_common/: README.md  library.json  platformio.ini
E-Stop/esp32_lora_estop_firmware_common/include/: ble_interface.h  comm_interface.h  crosstalk.hpp  deadman_comm_interface.h  host_comm.h
E-Stop/esp32_lora_estop_firmware_common/src/: ble_client_interface.cpp  ble_client_interface.h  ble_server_interface.cpp  ble_server_interface.h  comm_interface.cpp  deadman_comm_interface.cpp  esp_now_interface.cpp  esp_now_interface.h  lora_interface.cpp  lora_interface.h
E-Stop/esp32_lora_estop_interface/: CMakeLists.txt  README.md  package.xml
E-Stop/esp32_lora_estop_interface/msg/: CommStatus.msg
E-Stop/esp32_lora_estop_interface/srv/: SetEnabled.srv
E-Stop/esp32_lora_estop_receiver_firmware/: platformio.ini
E-Stop/esp32_lora_estop_receiver_firmware/include/: crosstalk_hardware_serial_wrapper.hpp
E-Stop/esp32_lora_estop_receiver_firmware/src/: main.cpp
E-Stop/esp32_lora_estop_ros/: CMakeLists.txt  README.md  package.xml
E-Stop/esp32_lora_estop_ros/include/esp32_lora_estop_ros/: receiver_interface_node.hpp
E-Stop/esp32_lora_estop_ros/src/: crosstalk_lib_serial_wrapper.hpp  receiver_interface_node.cpp
E-Stop/esp32_lora_estop_sender_firmware/: platformio.ini
E-Stop/esp32_lora_estop_sender_firmware/include/: mean_filter.h
E-Stop/esp32_lora_estop_sender_firmware/src/: main.cpp
electronics/: .gitattributes  README.md
electronics/kicad/libraries/ACS72981ELRATR/: ACS72981ELRATR.kicad_sym
electronics/kicad/libraries/ADS1115IDGSR/: ADS1115IDGSR.step
electronics/kicad/libraries/AMASS XT30/: XT30-F.STEP  XT30-M.STEP
electronics/kicad/libraries/BTH500151LUAAUMA1/: BTH500151LUAAUMA1.kicad_sym  BTH500151LUAAUMA1.stp
electronics/kicad/libraries/BTS50055-1TMB/: BTS50055-1TMB.kicad_sym  BTS50055-1TMB.step
electronics/kicad/libraries/COIL744115/: COIL744115.kicad_sym  COIL744115.step
electronics/kicad/libraries/H60SB0A050NRDC/: H60SB0A050NRDC.kicad_sym  H60SB0A050NRDC.stp
electronics/kicad/libraries/IND_ASPIAIG-S6055_ABR/: IND_ASPIAIG-S6055_ABR.kicad_sym  IND_ASPIAIG-S6055_ABR.step
electronics/kicad/libraries/IRFS4010TRLPBF/: IRFS4010TRLPBF.kicad_sym  IRFS4010TRLPBF.step
electronics/kicad/libraries/LD1117S33TR/: LD1117S33TR.STEP  LD1117S33TR.kicad_sym
(+94 files in other folders)
